# console-arkanoid

./: CHANGELOG.md  README.md  arkanoid.cabal
app/: Cli.hs  Main.hs
src/: Utils.hs
src/Arkanoid/: DSL.hs  Draw.hs  IOInterpreter.hs  PureInterpreter.hs  Types.hs
test/: ArkanoidSpec.hs  CommandSeq.hs
