cabal-version:      2.4
name:               arkanoid
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             kindofdev
maintainer:         jose.velasco.home@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Arkanoid.DSL 
                    , Arkanoid.PureInterpreter
                    , Arkanoid.IOInterpreter
                    , Arkanoid.Draw
                    , Arkanoid.Types
                    , Utils

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0
                    , mtl
                    , lens
                    , stm
                    , async
                    , containers
                    , extra
                    , free
                    , ansi-terminal

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall

executable arkanoid
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Cli

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0
      , arkanoid
      , stm
      , extra
      , ansi-terminal
      , random
      , containers

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall

test-suite arkanoid-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          ArkanoidSpec.hs

    other-modules:  CommandSeq 
    build-depends:    base ^>=4.14.1.0
                    , arkanoid
                    , tasty
                    , tasty-hunit 
                    , extra
                    , containers
                    , either
                    , ansi-terminal
                    , lens
    
    ghc-options:    -Wall        